Modernization, take 1